// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/CombinedSystemMessage should match snapshot 1`] = `
<React.Fragment>
  <React.Fragment
    key="system_add_to_channeluser_id_1"
  >
    <Connect(Markdown)
      message="@AddedUser1 **added to the channel** by @User1."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "@AddedUser1",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "@User1",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
  <React.Fragment
    key="system_add_to_channeluser_id_1"
  >
    <Connect(Markdown)
      message="You were **added to the channel** by @User1."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "You",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "@User1",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
  <React.Fragment
    key="system_add_to_channelcurrent_user_id"
  >
    <Connect(Markdown)
      message="@AddedUser2 **added to the channel** by you."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "@AddedUser2",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "you",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
</React.Fragment>
`;

exports[`components/post_view/CombinedSystemMessage should match snapshot when join leave messages are turned off 1`] = `
<React.Fragment>
  <React.Fragment
    key="system_add_to_channeluser_id_1"
  >
    <Connect(Markdown)
      message="You were **added to the channel** by @User1."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "You",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "@User1",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
  <React.Fragment
    key="system_add_to_channelcurrent_user_id"
  >
    <Connect(Markdown)
      message="@AddedUser2 **added to the channel** by you."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "@AddedUser2",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "you",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
</React.Fragment>
`;

exports[`components/post_view/CombinedSystemMessage should match snapshot, "removed from channel" message when join leave messages are turned off 1`] = `
<React.Fragment>
  <React.Fragment
    key="system_remove_from_channelcurrent_user_id"
  >
    <Connect(Markdown)
      message="@removed_username_1 was **removed from the channel**."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "@removed_username_1",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "you",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
</React.Fragment>
`;

exports[`components/post_view/CombinedSystemMessage should match snapshot, combining users removed from channel by all actors 1`] = `
<React.Fragment>
  <React.Fragment
    key="system_remove_from_channelcurrent_user_id"
  >
    <Connect(Markdown)
      message="@removed_username_1 and @removed_username_2 were **removed from the channel**."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "@removed_username_1",
            },
            Object {
              "key": "@removed_username_2",
            },
            Object {
              "key": "you",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
</React.Fragment>
`;

exports[`components/post_view/CombinedSystemMessage should match snapshot, when current user is removed from then rejoined the channel 1`] = `
<React.Fragment>
  <React.Fragment
    key="system_join_channelundefined"
  >
    <Connect(Markdown)
      message="You **joined the channel**."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "You",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
  <React.Fragment
    key="system_remove_from_channelcurrent_user_id"
  >
    <LastUsers
      actor="you"
      expandedLocale={
        Object {
          "defaultMessage": "{users} and {lastUser} were **removed from the channel**.",
          "id": "combined_system_message.removed_from_channel.many_expanded",
        }
      }
      formatOptions={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "You",
            },
            Object {
              "key": "@removed_username_1",
            },
            Object {
              "key": "you",
            },
          ],
          "singleline": true,
        }
      }
      postType="system_remove_from_channel"
      usernames={
        Array [
          "You",
          "@removed_username_1",
          "@removed_username_2",
        ]
      }
    />
    <br />
  </React.Fragment>
</React.Fragment>
`;
